tests/expected_output/invalid_preprocessing_directive/000000-clang-14.0-x86_64-pc-linux-gnu.txt
invalid_preprocessing_directive.c:1:2: error: invalid preprocessing directive
#inclde <stdio.h>
 ^
dcc explanation: you have an invalid line begining with '#'.
Did you mean #include or #define  ? 
